examples/bad/09-13-binding.latf
void fun() {
    println("fun"); 
}

int main() {
    if (true) {
        int fun = 42;
        fun(); // error - not a function
    }

    return 0;
}